# zakki

./: .migrant.toml  .travis.yml  Cargo.toml  Procfile  Rocket.toml
migrations/20171129141747_init/: down.sql  up.sql
src/: errors.rs  main.rs
src/db/: article.rs  mod.rs  person.rs  testutil.rs
src/views/: admin.rs  mod.rs
static/css/: admin.css  style.css
